# hlamovshchik-bot

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  renew-certs.sh
alembic/: env.py
backups/: db_2026-01-11_15-17-35.sql  db_2026-01-11_15-22-41.sql  db_2026-01-11_15-23-11.sql  db_2026-01-11_15-23-41.sql  db_2026-01-11_15-24-11.sql  db_2026-01-11_15-24-41.sql  db_2026-01-11_15-25-11.sql  db_2026-01-11_15-25-41.sql  db_2026-01-11_15-26-11.sql  db_2026-01-11_15-26-41.sql  db_2026-01-11_15-27-11.sql  db_2026-01-11_15-27-41.sql  db_2026-01-11_15-28-11.sql  db_2026-01-11_15-28-41.sql  db_2026-01-11_15-29-11.sql  db_2026-01-11_15-29-41.sql  db_2026-01-11_15-30-12.sql  db_2026-01-11_15-30-42.sql  db_2026-01-11_15-31-12.sql  db_2026-01-11_15-31-42.sql  db_2026-01-11_15-32-12.sql  db_2026-01-11_15-32-42.sql  db_2026-01-11_15-33-12.sql  db_2026-01-11_15-33-42.sql  db_2026-01-11_15-34-12.sql  db_2026-01-11_15-34-42.sql  db_2026-01-11_15-35-12.sql  db_2026-01-11_15-35-42.sql  db_2026-01-11_15-36-12.sql  db_2026-01-11_15-36-42.sql  db_2026-01-11_15-37-12.sql  db_2026-01-11_15-37-42.sql  db_2026-01-11_15-38-12.sql  db_2026-01-11_15-38-42.sql  db_2026-01-11_15-39-13.sql  db_2026-01-11_15-39-43.sql  db_2026-01-11_15-40-13.sql  db_2026-01-11_15-40-43.sql  db_2026-01-11_15-41-13.sql  db_2026-01-11_15-41-43.sql  (+3 more)
nginx/: nginx.conf
scripts/: crontab  entrypoint-dev.sh  entrypoint-devfast.sh  entrypoint.sh  init-letsencrypt.sh  restore-db.sh
src/: bot.py  config.py  fill_db.py  main.py
(+65 files in other folders)
